Phase2/w
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/build$ make
Consolidate compiler generated dependencies of target server
[ 60%] Built target server
Consolidate compiler generated dependencies of target test_server
[ 80%] Building CXX object CMakeFiles/test_server.dir/test/test_server.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp: In function ‘void mockWebSocketClient(boost::asio::ip::tcp::endpoint)’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:55:9: error: ‘received_message’ was not declared in this scope
   55 |         received_message = buffers_to_string(buffer.data());
      |         ^~~~~~~~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp: In member function ‘virtual void SystemStatsTest_BroadcastStatsSendsData_Test::TestBody()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:111:5: error: ‘received_message’ was not declared in this scope
  111 |     received_message.clear();  // Reset global variable
      |     ^~~~~~~~~~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp: In lambda function:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:125:46: error: ‘clients_mutex’ was not declared in this scope
  125 |            std::lock_guard<std::mutex> lock(clients_mutex);
      |                                             ^~~~~~~~~~~~~

/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/test/test_server.cpp:126:13: error: ‘clients’ was not declared in this scope
  126 |             clients.insert(ws);
      |             ^~~~~~~
make[2]: *** [CMakeFiles/test_server.dir/build.make:76: CMakeFiles/test_server.dir/test/test_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:111: CMakeFiles/test_server.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
